Added more documentation to production.projection

--- a/notebooks/05d_production.projection.ipynb
+++ b/notebooks/05d_production.projection.ipynb
@@ -62,6 +62,24 @@
     "# | export\n",
     "\n",
     "class P4Mosaic:\n",
+    "    \"\"\"\n",
+    "    A class to handle mosaic operations for a given observation ID.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        The observation ID used to locate the source product and mosaic path.\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    mosaic_path : pathlib.Path\n",
+    "        The path to the mosaic file.\n",
+    "    Methods\n",
+    "    -------\n",
+    "    read()\n",
+    "        Reads the mosaic file and returns it as an xarray DataArray.\n",
+    "    show(xslice=None, yslice=None)\n",
+    "        Displays the mosaic image using hvplot with optional slicing.\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(self, obsid):\n",
     "        source_prod = SOURCE_PRODUCT(f\"{obsid}_RED4_0\")\n",
     "        self.mosaic_path = source_prod.local_path.parent / f\"{obsid}_mosaic_RED45.cub\"\n",
@@ -72,6 +90,20 @@
     "        )\n",
     "\n",
     "    def show(self, xslice=None, yslice=None):\n",
+    "        \"\"\"\n",
+    "        Display an image with optional slicing.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        xslice : slice, optional\n",
+    "            Slice for the x-axis. If None, no slicing is applied on the x-axis.\n",
+    "        yslice : slice, optional\n",
+    "            Slice for the y-axis. If None, no slicing is applied on the y-axis.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        hvplot\n",
+    "            An image plot with the specified slicing and visualization options.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        data = self.read()\n",
     "        if xslice is not None or yslice is not None:\n",
     "            data = data.isel(x=xslice, y=yslice)\n",
@@ -115,7 +147,24 @@
     "\n",
     "\n",
     "def stitch_cubenorm(spid1, spid2):\n",
-    "    \"Stitch together the 2 CCD chip images and do a cubenorm.\"\n",
+    "    \"\"\"\n",
+    "    Stitch together the 2 CCD chip images and perform a cubenorm operation.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    spid1 : object\n",
+    "        The first CCD chip image object. Must have attributes `local_cube` and `stitched_cube_path`.\n",
+    "    spid2 : object\n",
+    "        The second CCD chip image object. Must have attributes `local_cube` and `stitched_cube_path`.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    normed : pathlib.Path\n",
+    "        The path to the normalized stitched cube file.\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ProcessError\n",
+    "        If there is an error during the stitching or cubenorm process.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    logger.info(\"Stitch/cubenorm %s and %s\", spid1, spid2)\n",
     "    cub = spid1.stitched_cube_path\n",
     "    normed = cub.with_suffix(\".norm.cub\")\n",
@@ -171,6 +220,33 @@
     "\n",
     "\n",
     "def create_RED45_mosaic(obsid, overwrite=False):\n",
+    "    \"\"\"\n",
+    "    Create a RED45 mosaic from EDR data associated with a given observation ID (obsid).\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        The observation ID for which the RED45 mosaic is to be created.\n",
+    "    overwrite : bool, optional\n",
+    "        If True, existing mosaic files will be overwritten. Default is False.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple\n",
+    "        A tuple containing the observation ID and a boolean indicating success (True) or failure (False).\n",
+    "    Notes\n",
+    "    -----\n",
+    "    This function processes EDR data to create a RED45 mosaic. It performs the following steps:\n",
+    "    1. Retrieves the list of RED_PRODUCTS associated with the given obsid.\n",
+    "    2. Checks if the mosaic file already exists and if overwriting is allowed.\n",
+    "    3. Downloads the RED_PRODUCTS and performs necessary preprocessing.\n",
+    "    4. Normalizes and stitches the RED4 and RED5 channels.\n",
+    "    5. Uses the `handmos` tool to create the mosaic, handling the overlap gap between RED4 and RED5.\n",
+    "    6. Cleans up temporary files.\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ProcessError\n",
+    "        If there is an error during the `handmos` process, the error details are printed.\n",
+    "    \"\"\"\n",
+    "\n",
     "    logger.info(\"Processing the EDR data associated with \" + obsid)\n",
     "\n",
     "    products = get_RED45_mosaic_inputs(obsid)  # get list of RED_PRODUCTS\n",
@@ -248,6 +324,24 @@
     "# | export\n",
     "\n",
     "def do_campt(mosaicname, savepath, temppath):\n",
+    "    \"\"\"\n",
+    "    Executes the campt command with the provided parameters from ISIS. \n",
+    "    Campt computes the geometric information like longitude and lattitude at a given pixel location.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    mosaicname : str\n",
+    "        The name of the mosaic file to process.\n",
+    "    savepath : str\n",
+    "        The path where the output should be saved.\n",
+    "    temppath : str\n",
+    "        The path to the temporary file containing coordinates.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple\n",
+    "        A tuple containing the mosaicname and a boolean indicating success (False if an error occurred).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \n",
     "    print(\"Calling do_campt\")\n",
     "    try:\n",
     "        campt(\n",
@@ -272,6 +366,42 @@
     "# | export\n",
     "\n",
     "class XY2LATLON:\n",
+    "    \"\"\"\n",
+    "    A class to convert XY coordinates to latitude and longitude using ground projection data.\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    edrpath : str\n",
+    "        Path to the ground projection root directory.\n",
+    "    df : pandas.DataFrame\n",
+    "        DataFrame containing the data to be processed.\n",
+    "    obsid : str\n",
+    "        Observation ID, derived from the DataFrame if not provided.\n",
+    "    inpath : pathlib.Path\n",
+    "        Input path where the files are located.\n",
+    "    overwrite : bool\n",
+    "        Flag to indicate whether to overwrite existing files.\n",
+    "    p4m : P4Mosaic\n",
+    "        Instance of the P4Mosaic class for handling mosaic paths.\n",
+    "    Properties\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        Gets or sets the observation ID.\n",
+    "    mosaicpath : str\n",
+    "        Returns the path to the mosaic file.\n",
+    "    savepath : pathlib.Path\n",
+    "        Returns the path to save the campt output CSV file.\n",
+    "    savepath_blotch : pathlib.Path\n",
+    "        Returns the path to save the blotch campt output CSV file.\n",
+    "    savepath_fan : pathlib.Path\n",
+    "        Returns the path to save the fan campt output CSV file.\n",
+    "    temppath : pathlib.Path\n",
+    "        Returns the temporary path for intermediate files.\n",
+    "    Methods\n",
+    "    -------\n",
+    "    process_inpath():\n",
+    "        Processes the input path and generates the necessary campt output files.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    edrpath = io.get_ground_projection_root()\n",
     "\n",
     "    def __init__(self, df, inpath, overwrite=False, obsid=None):\n",
@@ -339,6 +469,46 @@
     "# | export \n",
     "\n",
     "class TileCalculator:\n",
+    "    \"\"\"\n",
+    "    A class to calculate tile coordinates for HiRISE images.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    cubepath : str or Path\n",
+    "        The path to the HiRISE image cube.\n",
+    "    read_data : bool, optional\n",
+    "        If True, reads data from the database (default is True).\n",
+    "    dbname : str, optional\n",
+    "        The name of the database to read data from (default is None).\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    cubepath : Path\n",
+    "        The path to the HiRISE image cube.\n",
+    "    data : DataFrame\n",
+    "        The observation ID markings data from the database.\n",
+    "    img_name : str\n",
+    "        The image name derived from the cube path.\n",
+    "    x_tile_max : int\n",
+    "        The maximum x tile value.\n",
+    "    y_tile_max : int\n",
+    "        The maximum y tile value.\n",
+    "    campt_results_path : Path\n",
+    "        The path to save the campt results.\n",
+    "    temppath : Path\n",
+    "        The temporary path for campt input coordinates.\n",
+    "    final_path : Path\n",
+    "        The final path to save the tile coordinates.\n",
+    "    tile_coords_df : DataFrame\n",
+    "        The DataFrame containing tile coordinates.\n",
+    "    Methods\n",
+    "    -------\n",
+    "    get_xy_tiles()\n",
+    "        Returns a grid of x and y tile values.\n",
+    "    get_campt_input_coords()\n",
+    "        Returns a DataFrame with campt input coordinates.\n",
+    "    calc_tile_coords()\n",
+    "        Calculates and saves the tile coordinates.\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(self, cubepath, read_data=True, dbname=None):\n",
     "        self.cubepath = Path(cubepath)\n",
     "        if read_data:\n",
@@ -390,6 +560,28 @@
     "        return df\n",
     "\n",
     "    def calc_tile_coords(self):\n",
+    "        \"\"\"\n",
+    "        Calculate tile coordinates and correlate them with image IDs.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        None\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "\n",
+    "        Notes\n",
+    "        -----\n",
+    "        1. Retrieves camera input coordinates.\n",
+    "        2. Saves the coordinates to a temporary CSV file.\n",
+    "        3. Executes the `do_campt` function to process the coordinates.\n",
+    "        4. Reads the results from the campt output CSV file.\n",
+    "        5. Merges the results with the original coordinates.\n",
+    "        6. Correlates the merged data with image IDs and tile coordinates.\n",
+    "        7. Saves the final correlated data to a CSV file.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        df = self.get_campt_input_coords()\n",
     "        df[[\"x_hirise\", \"y_hirise\"]].to_csv(self.temppath, header=False, index=False)\n",
     "        do_campt(self.cubepath, self.campt_results_path, self.temppath)\n",
