added more documentation

--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -91,6 +91,27 @@
     "\n",
     "\n",
     "def plot_results(p4id, labels, data=None, kind=None, reduced_data=None, ax=None):\n",
+    "    \"\"\"\n",
+    "    Plots the results of a clustering algorithm.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    p4id : object\n",
+    "        An object that contains methods for plotting and showing subframes.\n",
+    "    labels : array-like\n",
+    "        Cluster labels for each point in the dataset.\n",
+    "    data : pandas.DataFrame, optional\n",
+    "        The original data points with 'x' and 'y' coordinates. Default is None.\n",
+    "    kind : str, optional\n",
+    "        The type of marking to plot (e.g., 'blotch', 'fan'). Default is None.\n",
+    "    reduced_data : pandas.DataFrame, optional\n",
+    "        The reduced data points to be plotted. Default is None.\n",
+    "    ax : matplotlib.axes.Axes, optional\n",
+    "        The axes on which to plot. If None, a new figure and axes are created. Default is None.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "\n",
     "    functions = dict(blotch=p4id.plot_blotches, fan=p4id.plot_fans)\n",
     "    if ax is None:\n",
     "        _, ax = plt.subplots()\n",
@@ -104,9 +125,7 @@
     "    markings.set_subframe_size(ax)\n",
     "    # pick correct function for kind of marking:\n",
     "    if any(reduced_data):\n",
-    "        functions[kind](ax=ax, data=reduced_data, lw=1, with_center=True)\n",
-    "\n",
-    "\n"
+    "        functions[kind](ax=ax, data=reduced_data, lw=1, with_center=True)"
    ]
   },
   {
@@ -178,10 +197,38 @@
     "        }\n",
     "\n",
     "    def show_markings(self, id_):\n",
+    "        \"\"\"\n",
+    "        Displays the markings for a given ID.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        id_ : int or str\n",
+    "            The identifier for the markings to be displayed.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        \"\"\"\n",
     "        p4id = markings.TileID(id_)\n",
     "        p4id.plot_all()\n",
     "\n",
     "    def cluster_any(self, X, eps):\n",
+    "        \"\"\"\n",
+    "        Perform DBSCAN clustering on the given data.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        X : array-like, shape (n_samples, n_features)\n",
+    "            The input data to be clustered.\n",
+    "        eps : float\n",
+    "            The maximum distance between two samples for one to be considered as in the neighborhood of the other.\n",
+    "            \n",
+    "        Yields\n",
+    "        ------\n",
+    "        indices : array-like, shape (n_samples,)\n",
+    "            Boolean mask indicating the members of the current cluster.\n",
+    "        \"\"\"\n",
+    "\n",
     "        logger.debug(\"Clustering any.\")\n",
     "        db = DBSCAN(eps, min_samples=self.min_samples).fit(X)\n",
     "        labels = db.labels_\n",
