--- a/notebooks/05f_production.fnotching.ipynb
+++ b/notebooks/05f_production.fnotching.ipynb
@@ -169,7 +169,27 @@
     "# | export\n",
     "\n",
     "def fnotch_image_ids(obsid, eps=20, savedir=None, scope=\"hirise\"):\n",
+    "    \"\"\"\n",
+    "    Cluster each image_id for an obsid separately and perform fnotching.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        Observation ID for which the clustering and fnotching is performed.\n",
+    "    eps : int, optional\n",
+    "        The maximum distance in pixels to consider for fnotching, by default 20.\n",
+    "    savedir : str, optional\n",
+    "        Directory where the results will be saved, by default None.\n",
+    "    scope : str, optional\n",
+    "        Coordinate scope of the calculation, by default \"hirise\".\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "    \"\"\"\n",
     "    \"Cluster each image_id for an obsid separately.\"\n",
+    "\n",
+    "\n",
     "    # the clustering results were stored as L1A products\n",
     "    pm = io.PathManager(obsid=obsid, datapath=savedir)\n",
     "    paths = pm.get_obsid_paths(\"L1A\")\n",
@@ -276,7 +296,7 @@
    "outputs": [],
    "source": [
     "# | export \n",
-    "\n",
+    "#TODO probably combine\n",
     "def apply_cut_obsid(obsid, cut=0.5, savedir=None):\n",
     "    pm = io.PathManager(obsid=obsid, cut=cut, datapath=savedir)\n",
     "    try:\n",
