fixed typing error

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -548,7 +548,7 @@
     "\n",
     "def histogram_polar(\n",
     "    df,\n",
-    "    ls_bin: int | ArrayLike = 4,\n",
+    "    ls_bin = 4,\n",
     "    per_obsid=False,\n",
     "    segmentsize=3.6,\n",
     "    alpha=0.5,\n",
