--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1781,7 +1781,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
