Update README and transition to markdown format; remove README.rst. Bump version to 0.10.1 and add new features for tile URL retrieval and subframe access. Enhance code documentation and clean up notebook examples.

--- a/notebooks/01_markings.ipynb
+++ b/notebooks/01_markings.ipynb
@@ -50,16 +50,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "IMG_X_SIZE = 840"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
+    "IMG_X_SIZE = 840\n",
     "IMG_Y_SIZE = 648"
    ]
   },
@@ -126,26 +117,6 @@
    "source": [
     "# | export\n",
     "class Blotch(Ellipse):\n",
-    "    \"\"\"Blotch management class for P4.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data : object with blotch data attributes\n",
-    "        object should provide attributes [`x`, `y`, `radius_1`, `radius_2`, `angle`]\n",
-    "    scope : {'planet4', 'hirise'}\n",
-    "        string that decides between using x/y or image_x/image_y as center corods\n",
-    "    color : str, optional\n",
-    "        to control the color of the mpl.Ellipse object\n",
-    "\n",
-    "    Attributes\n",
-    "    ----------\n",
-    "    to_average : list\n",
-    "        List of cols to be averaged after clustering\n",
-    "    data : object with blotch data attributes, as provided by `data`\n",
-    "    center : tuple (inherited from matplotlib.Ellipse)\n",
-    "        Coordinates of center, i.e. self.x, self.y\n",
-    "    \"\"\"\n",
-    "\n",
     "    to_average = \"x y image_x image_y angle radius_1 radius_2\".split()\n",
     "\n",
     "    @classmethod\n",
@@ -154,7 +125,25 @@
     "        data = df[df.tile_id == tile_id].iloc[n]\n",
     "        return cls(data, **kwargs)\n",
     "\n",
-    "    def __init__(self, data, scope=\"planet4\", with_center=False, url_db=\"\", **kwargs):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        data,  # object with blotch data attributes: x, y, radius_1, radius_2, angle\n",
+    "        scope=\"planet4\",  # \"planet4\" or \"hirise\"\n",
+    "        with_center=False,  # if True, plot the center of the blotch\n",
+    "        url_db=\"\",  # path to the url database\n",
+    "        **kwargs,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Blotch management class for P4.\n",
+    "\n",
+    "        Attributes\n",
+    "        ----------\n",
+    "        to_average : list\n",
+    "            List of cols to be averaged after clustering\n",
+    "        data : object with blotch data attributes, as provided by `data`\n",
+    "        center : tuple (inherited from matplotlib.Ellipse)\n",
+    "            Coordinates of center, i.e. self.x, self.y\n",
+    "        \"\"\"\n",
     "        self.data = data\n",
     "        self.scope = scope if scope is not None else \"planet4\"\n",
     "        self.with_center = with_center\n",
@@ -445,41 +434,6 @@
    "source": [
     "# | export\n",
     "class Fan(lines.Line2D):\n",
-    "    \"\"\"Fan management class for P4.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data : object with fan data attributes\n",
-    "        object has to provide [`x`, `y`, `angle`, `spread`, `distance`]\n",
-    "    scope : {'planet4', 'hirise'}\n",
-    "        string that decides between using x/y or image_x/image_y as base coords\n",
-    "    kwargs : dictionary, optional\n",
-    "\n",
-    "    Attributes\n",
-    "    ----------\n",
-    "    to_average : list\n",
-    "        List of columns to average after clustering\n",
-    "    data : object with fan data attributes\n",
-    "        as provided by `data`.\n",
-    "    base : tuple\n",
-    "        base coordinates `x` and `y`.\n",
-    "    inside_half : float\n",
-    "        `data` divided by 2.0.\n",
-    "    armlength : float\n",
-    "        length of the fan arms.\n",
-    "    v1 : float[2]\n",
-    "        vector of first arm of fan.\n",
-    "    v2 : float[2]\n",
-    "        vector of second arm of fan.\n",
-    "    coords : float[3, 2]\n",
-    "        Set of coords to draw for MPL.Line2D object: arm1->base->arm2\n",
-    "    circle_base\n",
-    "    center\n",
-    "    radius\n",
-    "    midpoint\n",
-    "    base_to_midpoint_vec\n",
-    "    \"\"\"\n",
-    "\n",
     "    to_average = \"x y image_x image_y angle spread distance\".split()\n",
     "\n",
     "    @classmethod\n",
@@ -488,7 +442,39 @@
     "        data = df[df.tile_id == tile_id].iloc[n]\n",
     "        return cls(data, **kwargs)\n",
     "\n",
-    "    def __init__(self, data, scope=\"planet4\", with_center=False, **kwargs):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        data,  # object with fan data attributes: x, y, angle, spread, distance\n",
+    "        scope=\"planet4\",  # \"planet4\" or \"hirise\"\n",
+    "        with_center=False,  # if True, plot the center of the fan\n",
+    "        **kwargs,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Fan management class for P4.\n",
+    "\n",
+    "        Attributes\n",
+    "        ----------\n",
+    "        to_average : list\n",
+    "            List of columns to average after clustering\n",
+    "        data : object with fan data attributes\n",
+    "            as provided by `data`.\n",
+    "        base : tuple\n",
+    "            base coordinates `x` and `y`.\n",
+    "        inside_half : float\n",
+    "            `data` divided by 2.0.\n",
+    "        armlength : float\n",
+    "            length of the fan arms.\n",
+    "        v1 : float[2]\n",
+    "            vector of first arm of fan.\n",
+    "        v2 : float[2]\n",
+    "        coords : float[3, 2]\n",
+    "            Set of coords to draw for MPL.Line2D object: arm1->base->arm2\n",
+    "        circle_base\n",
+    "        center\n",
+    "        radius\n",
+    "        midpoint\n",
+    "        base_to_midpoint_vec\n",
+    "        \"\"\"\n",
     "        self.data = data\n",
     "        self.scope = scope if scope is not None else \"planet4\"\n",
     "        self.with_center = with_center\n",
