--- a/notebooks/00_io.ipynb
+++ b/notebooks/00_io.ipynb
@@ -614,6 +614,64 @@
    "outputs": [],
    "source": [
     "# | export\n",
+    "def normalize_tile_id(tile_id: str) -> str:\n",
+    "    \"\"\"Normalize a tile ID by adding 'APF' prefix and leading zeros if necessary.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    tile_id : str\n",
+    "        Full or partial tile ID. If partial, it will be padded with 'APF' and leading zeros.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        Complete tile ID in format 'APF0000xxx' (always 9 characters)\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> normalize_tile_id('r8y')\n",
+    "    'APF0000r8y'\n",
+    "    >>> normalize_tile_id('0000r8y')\n",
+    "    'APF0000r8y'\n",
+    "    >>> normalize_tile_id('APF0000r8y')\n",
+    "    'APF0000r8y'\n",
+    "    >>> normalize_tile_id('123r8y')\n",
+    "    'APF0123r8y'\n",
+    "    \"\"\"\n",
+    "    # Remove 'APF' prefix if present\n",
+    "    if tile_id.upper().startswith(\"APF\"):\n",
+    "        tile_id = tile_id[3:]\n",
+    "\n",
+    "    # Calculate how many zeros we need to add\n",
+    "    target_length = 7  # length without 'APF'\n",
+    "    current_length = len(tile_id)\n",
+    "\n",
+    "    if current_length > target_length:\n",
+    "        raise ValueError(f\"Tile ID too long: {tile_id}\")\n",
+    "\n",
+    "    # Add necessary leading zeros\n",
+    "    padded_id = \"0\" * (target_length - current_length) + tile_id\n",
+    "\n",
+    "    # Add APF prefix\n",
+    "    return f\"APF{padded_id}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert normalize_tile_id(\"ci9\") == \"APF0000ci9\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "def get_subframe(url):\n",
     "    targetpath = pooch.retrieve(\n",
     "        url, path=pooch.os_cache(\"p4tools/tiles\"), known_hash=None, progressbar=True\n",
@@ -630,7 +688,7 @@
    "source": [
     "# | export\n",
     "def get_url_for_tile_id(tile_id):\n",
-    "    return get_tile_urls().set_index(\"tile_id\").squeeze().at[tile_id]\n",
+    "    return get_tile_urls().set_index(\"tile_id\").squeeze().at[normalize_tile_id(tile_id)]\n",
     "\n",
     "\n",
     "def get_url_for_tile(tile_id):\n",
@@ -665,6 +723,26 @@
    ],
    "source": [
     "get_url_for_tile(tile_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://www.planetfour.org/subjects/standard/50e7429e5e2ed21240003f51.jpg'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_url_for_tile_id(\"ci9\")"
    ]
   },
   {
@@ -722,6 +800,7 @@
    "source": [
     "# | export\n",
     "def get_fans_for_tile(tile_id):\n",
+    "    tile_id = normalize_tile_id(tile_id)\n",
     "    fans = get_fan_catalog()\n",
     "    return fans.query(\"tile_id == @tile_id\")"
    ]
@@ -917,7 +996,7 @@
     }
    ],
    "source": [
-    "get_fans_for_tile(tile_id)"
+    "get_fans_for_tile(\"cia\")"
    ]
   },
   {
@@ -928,6 +1007,7 @@
    "source": [
     "# | export\n",
     "def get_blotches_for_tile(tile_id):\n",
+    "    tile_id = normalize_tile_id(tile_id)\n",
     "    blotches = get_blotch_catalog()\n",
     "    return blotches.query(\"tile_id == @tile_id\")"
    ]
@@ -1021,6 +1101,7 @@
    "source": [
     "# | export\n",
     "def get_hirise_id_for_tile(tile_id):\n",
+    "    tile_id = normalize_tile_id(tile_id)\n",
     "    try:\n",
     "        obsid = get_fan_catalog().query(\"tile_id == @tile_id\").obsid.iloc[0]\n",
     "    except IndexError:\n",
