--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -38,6 +38,8 @@
     "# | export\n",
     "def plot_blotches_for_tile(tile_id, ax=None, **plot_kwargs):\n",
     "    tile_blotches = io.get_blotches_for_tile(tile_id)\n",
+    "    if len(tile_blotches) == 0:\n",
+    "        print(\"Warning: No blotches found.\")\n",
     "    if ax is None:\n",
     "        _, ax = plt.subplots()\n",
     "    for _, blotch in tile_blotches.iterrows():\n",
